--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@dailybruin/lux": "file:.yalc/@dailybruin/lux",
     "@zeit/next-typescript": "^1.1.1",
+    "apollo-fetch": "^0.7.0",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
     "graphql-anywhere": "^4.2.1",
     "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "next-apollo": "^2.0.9",
