--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
     "deploy": "NODE_ENV=production next start -p 1919"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.22",
+    "@emotion/react": "^11.7.1",
     "axios": "^0.21.1",
+    "babel-cli": "^6.26.0",
     "d3": "^5.12.0",
     "disqus-react": "^1.0.8",
     "he": "^1.2.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
-    "next": "9.4.4",
+    "next": "12",
     "next-images": "^1.2.0",
     "next-plugin-transpile-modules": "^2.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.11.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-infinite-scroller": "^1.2.4",
     "react-markdown": "^6.0.1",
     "react-masonry-component": "^6.2.1",
     "react-media": "^1.10.0",
     "react-native-chartbeat-cs": "^5.2.0",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "webpack": "^5.69.1"
   },
   "devDependencies": {
     "prettier": "1.18.2"
